Added get queries endpoint
